--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          disptribution: 'adopt'
+          distribution: 'adopt'
       - name: Compile with Maven
         run: mvn compile
       - name: Run tests
